--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "posthog-plugin",
   "version": "1.0.0",
-  "description": "An app to integrate posthog and engage",
+  "description": "Engage + Posthog Integration",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
