--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "posthog-plugin",
-  "version": "1.0.0",
-  "description": "Engage + Posthog Integration",
+  "version": "2.0.0",
+  "description": "Send user and group attributes and events from PostHog to Engage for personalized customer engagement.",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
